Added Day02 Part 01

--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day1\DayOne.cs" />
+    <Compile Include="Day2\DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
